--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://localhost:4000" # the base hostname & protocol for your site
 twitter_username: monkeysh1ne
 github_username:  monkeysh1ne
+facebook_username: darrell.mayson
 
 # Build settings
 sass:
